# react-native-kytea

./: .gitmodules  README.md
docs/: build.md
package/: .gitignore  README.md  package-lock.json  package.json  react-native-kytea.podspec  react-native.config.js
package/android/: CMakeLists.txt  build.gradle  gradle.properties
package/android/src/main/assets/: .gitignore
package/android/src/main/java/com/fdrault/kytea/: KyteaPackage.java  KyteaPlatformContextModule.java
package/cmake/: CMakeLists.txt
package/cmake/src/: CMakeLists.txt
package/cmake/src/api/: CMakeLists.txt
package/cmake/src/lib/: CMakeLists.txt
package/cmake/src/lib/liblinear/: CMakeLists.txt
package/cmake/src/lib/liblinear/blas/: CMakeLists.txt
package/cmake/src/test/: CMakeLists.txt
package/cpp/: NativeKyteaModule.cpp  NativeKyteaModule.h  test.cpp  test.h
package/data/: about
package/example/: app.json  index.js  metro.config.js  package-lock.json  package.json
package/example/android/: settings.gradle
package/example/android/app/: build.gradle
package/example/android/app/src/main/java/com/reactnativekyteaexample/: MainActivity.kt  MainApplication.kt
package/example/android/app/src/main/res/values/: strings.xml
package/example/ios/: Podfile
package/example/ios/ReactNativeKyteaExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
package/example/ios/ReactNativeKyteaExample.xcodeproj/: project.pbxproj
package/example/ios/ReactNativeKyteaExample.xcodeproj/xcshareddata/xcschemes/: ReactNativeKyteaExample.xcscheme
package/example/ios/ReactNativeKyteaExample.xcworkspace/: contents.xcworkspacedata
package/example/ios/ReactNativeKyteaExampleTests/: ReactNativeKyteaExampleTests.m
package/example/src/: app.tsx  kytea-spec.ts
package/ios/: KyteaOnLoad.mm  KyteaPlatformContext.h  KyteaPlatformContextModule.mm
package/scripts/: copy-assets.sh
package/src/: NativeKytea.ts  NativeKyteaPlatformContext.ts  index.ts  kytea-spec.ts
